[project]
name = "valthon-pkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Harshal", email = "harshallaheri12@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
valthon-pkg = "valthon_pkg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
